--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/kennethreilly/Library/Android/sdk
-flutter.sdk=/Users/kennethreilly/Library/flutter
-flutter.buildMode=release
+sdk.dir=C:\\Users\\78sar\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Developer\\Flutter
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
